--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -134,6 +134,21 @@ en:
   metadata_template:
     download: "Download CSV"
   mime_type: "Mime Type"
+  model_tree_data:
+    kind:
+      aboutware: "Aboutware"
+      captions: "Closed Captions"
+      cover: "Thumbnail"
+      database: "Database"
+      descriptions: "Audio Descriptions"
+      epub: "Electronic Publication (EPUB)"
+      mobi: "Mobi"
+      pdf_ebook: "Portable Document Format (PDF)"
+      peer_review: "Peer Review"
+      related: "Related"
+      reviews: "Reviews"
+      transcript: "Transcript"
+      webgl: "WebGL"
   monograph_catalog:
     banner: "To support remote teaching and research during the COVID-19 global health event, titles in this collection are free-to-read until June 30, 2020. We encourage librarians to quickly <a href=\"https://umich.qualtrics.com/jfe/form/SV_cTNlZAMty6ReTg9\" id=\"banner-qualtrics-link\">register</a> their libraries to receive collection updates and communications. Please note that titles are only downloadable by patrons of purchasing libraries, with the exception of some titles that are open access."
     index:
