add fields for Monograph editions

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -70,6 +70,7 @@ en:
   date_published: "Date Published"
   display_date: "Date"
   doi: "DOI"
+  edition_name: "Edition Name"
   editor: "Editors"
   embargo_release_date: "Embargo Release Date"
   e_pubs:
@@ -179,6 +180,7 @@ en:
       export: "Download"
       preview: "Preview"
       upload: "Upload"
+  next_edition: "Next Edition"
   open_access: "Open Access?"
   original_checksum: "Original Checksum"
   pageviews_html: "<strong>%{count}</strong> views since %{date}"
@@ -193,6 +195,7 @@ en:
           label: "Search for works within %{press_name}"
           placeholder: "Search works"
     statistics: "Visualize Impact and Engagement"
+  previous_edition: "Previous Edition"
   publisher: "Publisher (citation value)"
   redirect_to: "Redirect to"
   resource_type: "Resource Type"
@@ -260,10 +263,13 @@ en:
         citation_publisher: "Citation Publisher"
         date_created: "Publication Year" # used on :date_created for Monographs
         description: "Description"
+        edition_name: :"edition_name"
         funder: "Funder"
         funder_display: "Funder Display"
         language: "Language"
         location: "Publication Location"
+        next_edition: :"next_edition"
+        previous_edition: :"previous_edition"
         series: "Series"
         subject: "Subject"
         title: "Title"
@@ -280,11 +286,14 @@ en:
         date_created: "The 4-digit publication year used in auto-generated citations."
         description: "A free-text description of the work (markdown allowed)."
         doi: "https://doi.org/ is automatically prepended"
+        edition_name: "Text used to describe this edition of the Monograph"
         hdl: "https://hdl.handle.net/ is automatically prepended"
         isbn: "Enter as many ISBN values as you want. Put the format in parentheses. Label the format according to the following rules: 123-123456-1 (hardcover), 123-123459-4 (paper), 123-123457-2 (ebook), 123-123458-3 (open access)"
         language: "The language of the monograph's content."
         location: "The place name used in auto-generated citations."
+        next_edition: "URL pointing to the next edition of the Monograph"
         press: "The monograph's publisher/press on Fulcrum."
+        previous_edition: "URL pointing to the previous edition of the Monograph"
         section_titles: "Used like a table of contents to indicate the order of attached FileSets' \"related sections\"."
         subject: "Keywords which describe what this monograph is about."
   sort_date: "Sort Date"
