edition info on press & monograph catalog pages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -150,6 +150,10 @@ en:
       show_page_button: "Manage Monograph and Files"
       edit_page_button: "Edit Monograph"
       home: "Home"
+      next_edition_html: "Read a newer version of <i>%{title}</i>"
+      next_edition: "Read a newer version of %{title}"
+      previous_edition_html: "Looking for an older version of <i>%{title}</i>?"
+      previous_edition: "Looking for an older version of %{title}?"
       read: "Start reading %{title}"
       read_book: "Read Book"
       reindex: "Reindex Monograph"
