add 'audiobook' representative (for download only)

--- a/config/locales/heliotrope.en.yml
+++ b/config/locales/heliotrope.en.yml
@@ -355,8 +355,8 @@ en:
         Fulcrum dev-only field. Can be used to redirect a FileSet.
       representative_kind: |
         Use this to assign a FileSet as one of its Monograph's "representatives".
-        Allowed representative values (as of 20181026) are:
-        epub, webgl, database, aboutware, pdf_ebook, mobi, reviews, related, peer_review and cover
+        Allowed representative values are:
+        epub, webgl, database, aboutware, pdf_ebook, mobi, reviews, related, peer_review, audiobook and cover
 
         You must ensure that the file is of an appropriate type to be used as the relevant representative:
         -- epub: *.epub (archive file)
@@ -368,6 +368,7 @@ en:
         -- reviews: *.html file
         -- related: *.html file
         -- peer_review: *.html file
+        -- audiobook: *.zip file (containing separate audio (mp3) files, one per chapter)
         -- cover: image file like *.jpg (not JPG 2000), *.tiff, *.png
       published: |
         Whether the object is currently "published" on Fulcrum.
