--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -80,6 +80,7 @@ en:
   credit_line: "Credit Line"
   date_created: "Date Created"
   date_published: "Date Published"
+  date_uploaded: "Date Created"
   display_date: "Date"
   doi: "DOI"
   edition_name: "Edition Name"
