modify monograph catalog UI layout; adjust admin edit button labels

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -158,8 +158,8 @@ en:
       buy_book: "Buy Book"
       catalog: "Books"
       download_book: "Download"
-      show_page_button: "Manage Monograph and Files"
-      edit_page_button: "Edit Monograph"
+      show_page_button: "Manage Files"
+      edit_page_button: "Edit"
       home: "Home"
       next_edition_html: "Read a newer version of <i>%{title}</i>"
       next_edition: "Read a newer version of %{title}"
