--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -128,6 +128,11 @@ en:
     base:
       items:
         component: "Component"
+    file_sets:
+      permission_form:
+        currently_sharing: Currently Shared With
+        table_title_access: Access Level
+        table_title_user: Person/Group
     search:
       form:
         q:
